--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <h1 class="navbar-logo">
         <img
-          src="images/moon-logo.png"
+          src="./images/moon-logo.png"
           alt="Lunaria Moon Logo"
           style="height: 50px; border-radius: 50%; box-shadow: 0 0 20px #00fff7"
         />
@@ -61,12 +61,12 @@
         <button class="carousel-btn prev">&#8592;</button>
         <div class="carousel-window">
           <div class="carousel-track">
-            <img src="images/moon1.png" alt="Moon 1" />
-            <img src="images/moon2.png" alt="Moon 2" />
-            <img src="images/moon3.png" alt="Moon 3" />
-            <img src="images/moon4.png" alt="Moon 4" />
-            <img src="images/moon5.png" alt="Moon 5" />
-            <img src="images/moon6.png" alt="Moon 6" />
+            <img src="./images/Moon1.png" alt="Moon 1" />
+            <img src="./images/Moon2.png" alt="Moon 2" />
+            <img src="./images/Moon3.png" alt="Moon 3" />
+            <img src="./images/Moon4.png" alt="Moon 4" />
+            <img src="./images/Moon5.png" alt="Moon 5" />
+            <img src="./images/Moon6.png" alt="Moon 6" />
           </div>
         </div>
         <button class="carousel-btn next">&#8594;</button>
@@ -136,7 +136,7 @@
       <h3 style="text-align: center; margin-top: 36px">Meet Our Astronauts</h3>
       <div class="astronaut-profiles-row">
         <div class="astronaut-card">
-          <img src="images/astro1.png" alt="Commander Ava" />
+          <img src="./images/Astro1.png" alt="Commander Ava" />
           <h4>Commander Ava Carter</h4>
           <p>
             Veteran astronaut and lead mission commander with over 250 days in
@@ -144,7 +144,7 @@
           </p>
         </div>
         <div class="astronaut-card">
-          <img src="images/astro2.png" alt="Pilot Rajiv" />
+          <img src="./images/Astro2.png" alt="Pilot Rajiv" />
           <h4>Pilot Rajiv Kapoor</h4>
           <p>
             Expert spacecraft pilot with precision lunar landing training and 18
@@ -152,7 +152,7 @@
           </p>
         </div>
         <div class="astronaut-card">
-          <img src="images/astro3.png" alt="Scientist Mei" />
+          <img src="./images/Astro3.png" alt="Scientist Mei" />
           <h4>Dr. Mei Tanaka</h4>
           <p>
             Astrobiologist and mission scientist, ensuring safety and innovation
